updated distro hopping page

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                 '/misc/.*/_sidebar.md': '/misc/_sidebar.md',
                 '/programming/.*/_sidebar.md': '/programming/_sidebar.md',
                 '/tech/.*/_sidebar.md': '/tech/_sidebar.md'
+            },
+            docsifyFootnote: {
+                hideSubAnchor: true,
             }
         }
     </script>
@@ -126,6 +129,7 @@
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-tabs"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-example-panels"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify-footnote/dist/docsify-footnote.min.js"></script>
     <!-- Docsify Themeable Plugin -->
     <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
     <!-- Prism Themes (https://unpkg.com/browse/prismjs@1.15.0/components/) -->
