reorganized and pruned articles that arent ever going to get written

--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
             },
             alias: {
                 '/.*/_navbar.md': '/_navbar.md',
-                '/games/.*/_sidebar.md': '/games/_sidebar.md',
                 '/misc/.*/_sidebar.md': '/misc/_sidebar.md',
-                '/programming/.*/_sidebar.md': '/programming/_sidebar.md',
-                '/tech/.*/_sidebar.md': '/tech/_sidebar.md'
+                '/software/.*/_sidebar.md': '/software/_sidebar.md'
             },
             docsifyFootnote: {
                 hideSubAnchor: true,
